# explirl

./: .gitignore  CONTRIBUTORS.md  DEMO_COMMANDS.txt  DEMO_GUIDE.md  DEMO_SUMMARY.md  IMAGE_XAI_IMPLEMENTATION.md  LICENSE  MANIFEST.in  Readme.md  demo.py  demo_complete.py  explanation.json  main.tex  pyproject.toml  requirements.txt  setup.py  test_data.csv  test_model.pkl  validate_pypi_ready.py
examples/: healthcare_demo.py  image_xai_demo.py  image_xai_simple.py  quickstart.py  tpo.py
expliRL/: __init__.py
expliRL/api/: service.py
expliRL/cli/: cli_tool.py
expliRL/core/: base_explainer.py  cf_explainer.py  gradcam_explainer.py  image_explainer.py  lime_explainer.py  lime_image_explainer.py  rl_cf_explainer.py  shap_explainer.py
expliRL/rl_engine/: agents.py  envs.py  rewards.py
expliRL/utils/: data_preprocessing.py  evaluation.py  image_utils.py  visualization.py
tests/: test_basic.py  test_image_explainers.py  test_import.py  test_models.py
